--- a/gb/23/12/30/n14147353.md
+++ b/gb/23/12/30/n14147353.md
@@ -25,7 +25,7 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/6/n10894661.md#1" target="_blank">林傲霜：为了活命的冒险——瞒产私分</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/5/18/n7908087.md#1" target="_blank">三次听法轮功真相 大陆公安腿病神奇康复</a></li>
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/27/n11481511.md#1" target="_blank">晓明：回顾历史，拒绝遗忘</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/15/n10977691.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(1) 不一样的人生</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132234.md#1">人身有多难得？聊斋中的轮回故事</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14119976.md#1">雨霖铃?李克强之死</a></li>
